add reticulate dependency

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,7 @@ jobs:
           packages: |
             any::knitr
             any::rmarkdown
+            any::reticulate
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
